添加ping-connect模块
Signed-off-by: procsl <program_chen@foxmail.com>