@@ -9,10 +9,20 @@
         <version>0.0.5-SNAPSHOT</version>
     </parent>
 
+
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ping-distribute</artifactId>
     <name>Ping 应用服务</name>
     <packaging>jar</packaging>
+
+    <properties>
+        <liquibase.version>4.15.0</liquibase.version>
+        <java.version>19</java.version>
+        <maven.compiler.target>19</maven.compiler.target>
+        <maven.compiler.source>19</maven.compiler.source>
+        <maven.compiler.compilerVersion>19</maven.compiler.compilerVersion>
+        <compiler.version>19</compiler.version>
+    </properties>
 
     <dependencies>
         <dependency>
@@ -23,6 +33,11 @@
         <dependency>
             <groupId>cn.procsl</groupId>
             <artifactId>ping-product</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.procsl</groupId>
+            <artifactId>ping-connect</artifactId>
         </dependency>
 
         <dependency>
@@ -55,6 +70,17 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
